; ModuleID = '/home/carl/AnghaBench/libgit2/tests/core/extr_path.c_check_percent_decoding.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/core/extr_path.c_check_percent_decoding.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_BUF_INIT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8*)* @check_percent_decoding to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @check_percent_decoding(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i32, i32* @GIT_BUF_INIT, align 4
  store i32 %6, i32* %5, align 4
  %7 = load i8*, i8** %4, align 8
  %8 = call i32 @git__percent_decode(i32* %5, i8* %7)
  %9 = call i32 @cl_git_pass(i32 %8)
  %10 = load i8*, i8** %3, align 8
  %11 = call i32 @git_buf_cstr(i32* %5)
  %12 = call i32 @cl_assert_equal_s(i8* %10, i32 %11)
  %13 = call i32 @git_buf_dispose(i32* %5)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git__percent_decode(i32*, i8*) #1

declare dso_local i32 @cl_assert_equal_s(i8*, i32) #1

declare dso_local i32 @git_buf_cstr(i32*) #1

declare dso_local i32 @git_buf_dispose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
